# Simulateur-ARM

./: .gitignore  Makefile.am  Makefile.in  README.md  arm_branch_other.c  arm_data_processing.c  arm_data_processing.h  arm_instruction.c  arm_instruction.h  arm_load_store.c  arm_load_store.h  memory.c  registers.c  registers.h  registers_test.c
Examples/: Makefile.am  bug_LDM_STM.s  ex_ADC.s  ex_ADD.s  ex_AND.s  ex_BIC.s  ex_CMN.s  ex_CMP.s  ex_COND.s  ex_EOR.s  ex_LDM_STM.s  ex_LDRH_STRH.s  ex_LDR_STR_LDM_STM.s  ex_LDR_STR_LDRB_STRB.s  ex_MRS.s  ex_MVN.s  ex_ORR.s  ex_RSB.s  ex_RSC.s  ex_SBC.s  ex_SUB.s  ex_TEQ.s  ex_TST.s  example1.s  test_adc.s  test_orr_bic.s
